# daily-file-mover

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml  pr-labeler.yml  release-drafter.yml
.github/workflows/: cui_test.yml  release-drafter.yml
src/: lib.rs  main.rs
src/commands/: config.rs  create.rs  extract.rs  mod.rs  pack.rs
src/cui/: mod.rs  options.rs
tests/: integration_tests.rs
