[package]
name = "daily-file-mover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = {version = "4", features = ["derive"]}
confy = "0.5.1"
regex = "1.8.1"
serde = "1.0.162"
serde_derive = "1.0.162"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
